--- a/project.html
+++ b/project.html
@@ -64,6 +64,6 @@
         <strong>Total Amount:</strong> <span id="totalAmount">$0.00</span>
     </div>
 
-    <script src="scripts/project.js"></script>
+    <script src="project.js"></script>
 </body>
 </html>
